--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
 
-                    <a class="nav-link" href="/review/1">Book a date</a>
+                    <a class="nav-link" href="/photos.html">Book a date</a>
                     <a class="nav-link" href="/quiz">See Photos and Videos</a>
                 </div>
             </div>
