--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
         <div class="container">
             <a class="navbar-brand" href="/">Home</a>
-            <!-- <a class="navbar-brand" href="/review/1">Book a date</a>
-            <a class="navbar-brand" href="/quiz">See Photos and Videos</a> -->
+            <!-- <a class="navbar-brand" href="/bookdate.html">Book a date</a>
+            <a class="navbar-brand" href="/photos.html">See Photos and Videos</a> -->
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
