--- a/index.html
+++ b/index.html
@@ -91,8 +91,15 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
 
+                  <!--
                     <a class="nav-link" href="/photos.html">Book a date</a>
                     <a class="nav-link" href="/quiz">See Photos and Videos</a>
+
+                    -->
+
+                    <a class="nav-link" href="/photos.html">Book a date</a>
+                    <a class="nav-link" href="/quiz">See Photos and Videos</a>
+                    
                 </div>
             </div>
         </div>
