--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 
                     -->
 
-                    <a class="nav-link" href="/photos.html">Book a date</a>
-                    <a class="nav-link" href="/quiz">See Photos and Videos</a>
+                    <a class="nav-link" href="https://github.com/nepalicode/Nepali-Pandit/blob/main/photos.html">Book a date</a>
+                    <a class="nav-link" href="https://github.com/nepalicode/Nepali-Pandit/blob/main/photos.html">See Photos and Videos</a>
                     
                 </div>
             </div>
