--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+        <meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0;  user-scalable=0;" name="viewport">
+        <link rel="stylesheet" href="../includes/style.css">
+    
     <link rel="icon" href="data:,">
 
     <!-- jquery -->
@@ -77,7 +81,7 @@
 
 
 
-<body>
+<body width = "device-width">
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
         <div class="container">
             <a class="navbar-brand" href="/">Home</a>
