--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
       <br> ज्यो. पं. उद्धव शास्त्री ☎ 6154397798 <br>
 
 
-              <a class="nav-link" href="/photos.html">Book a date</a>
-                    <a class="nav-link" href="/quiz">See Photos and Videos</a>
+              <a class="nav-link" href="/Nepali-Pandit/bookadate.html">Book a date</a>
+                    <a class="nav-link" href="/Nepali-Pandit/photos.html">See Photos and Videos</a>
 
         </div>
 
