--- a/photos.html
+++ b/photos.html
@@ -1,3 +1,9 @@
 <html>
-<h1> Here You wil see the photos </h1>
-</html>
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+        <meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0;  user-scalable=0;" name="viewport">
+        <link rel="stylesheet" href="../includes/style.css">
+    </head>
+    <body width = "device-width">
+        <img class="test"  src="../includes/buoy_map.jpg">
+    </body>
