--- a/photos.html
+++ b/photos.html
@@ -5,5 +5,5 @@
         <link rel="stylesheet" href="../includes/style.css">
     </head>
     <body width = "device-width">
-        <img class="test"  src="../includes/buoy_map.jpg">
+        <img src="https://pbs.twimg.com/media/EtKkekwXcAQPfhh?format=jpg&name=4096x4096">
     </body>
