--- a/photos.html
+++ b/photos.html
@@ -1,9 +1,21 @@
 <html>
+
+    <style>
+        img.test {
+    width: 100%;
+    height: auto;
+}
+        
+    </style>
+
+    
     <head>
         <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
         <meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0;  user-scalable=0;" name="viewport">
         <link rel="stylesheet" href="../includes/style.css">
     </head>
     <body width = "device-width">
-        <img src="https://pbs.twimg.com/media/EtKkekwXcAQPfhh?format=jpg&name=4096x4096">
+        <img class="test" src="https://pbs.twimg.com/media/EtKkekwXcAQPfhh?format=jpg&name=4096x4096">
     </body>
+
+</html>
