--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
         <div class="col-md-6">
             <img src="https://pbs.twimg.com/media/EtKkekwXcAQPfhh?format=jpg&name=4096x4096"
-            style="height:500px; width:800; padding-bottom:10px;">
+            style="height:auto; width:50%; padding-bottom:10px;">
 
         </div>
 
