--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
         <div class="col-md-6">
             <img src="https://pbs.twimg.com/media/EtKkekwXcAQPfhh?format=jpg&name=4096x4096"
-            style="height:auto; width:auto; padding-bottom:10px;">
+            style="height:auto; width:90%; padding-bottom:10px;">
 
         </div>
 
