--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div class="col-md-6">
         <div id="ipa">
 
-      <br> ज्यो. पं. उद्धव शास्त्री <br> ☎ <a font-size: 15pt; href="tel:"6154397798</a>
+      <br> ज्यो. पं. उद्धव शास्त्री <br> ☎ <a href="tel:">6154397798</a>
 
 
               <a class="nav-link" href="/Nepali-Pandit/bookadate.html">Book a date</a>
