--- a/index.html
+++ b/index.html
@@ -126,9 +126,11 @@
 
       <br> ज्यो. पं. उद्धव शास्त्री <br> ☎ <a href="tel:+16154397798">6154397798</a>
 
-
+<!--
               <a class="nav-link" href="/Nepali-Pandit/bookadate.html">Book a date</a>
                     <a class="nav-link" href="/Nepali-Pandit/photos.html">See Photos and Videos</a>
+
+            -->
 
         </div>
 
@@ -139,10 +141,11 @@
 
         <div class="col-md-6">
             <img src="https://pbs.twimg.com/media/EtKkekwXcAQPfhh?format=jpg&name=4096x4096"
-            style="height:auto; width:100%; padding-bottom:10px;">
+            style="height:50%; width:100%; padding-bottom:10px;">
 
         </div>
 
+       <!--
         <div class="col-md-6">
             <button class="btn btn-primary search-btn" id="call-button">
                 <h3>Call Now </h3>
@@ -153,6 +156,8 @@
             </button>
 
         </div>
+
+        -->
 
 
     </div>
