--- a/index.html
+++ b/index.html
@@ -140,9 +140,10 @@
     <div class="row">
 
         <div class="col-md-6">
+            <a href="/Nepali-Pandit/photos.html">
             <img src="https://pbs.twimg.com/media/EtKkekwXcAQPfhh?format=jpg&name=4096x4096"
             style="height:100%; width:100%; padding-bottom:10px;">
-
+<a/>
         </div>
 
        <!--
