--- a/photos.html
+++ b/photos.html
@@ -2,8 +2,8 @@
 
     <style>
         img.test {
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: auto;
 }
         
     </style>
