--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <body width = "device-width">
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
         <div class="container">
-            <a class="navbar-brand" href="/">Home</a>
+            <a class="navbar-brand" href="https://nepalicode.github.io/Nepali-Pandit/">Home</a>
             <!-- <a class="navbar-brand" href="/bookdate.html">Book a date</a>
             <a class="navbar-brand" href="/photos.html">See Photos and Videos</a> -->
 
