--- a/bookadate.html
+++ b/bookadate.html
@@ -1,3 +1,4 @@
 <html>
-<h1> Here You will Book a date for Puja </h1>
+<h1> We will make this option available very soon. For now, kindly make a call </h1>
+ <h2> <br> ज्यो. पं. उद्धव शास्त्री <br> ☎ <a href="tel:+16154397798">6154397798</a></h2>
 </html>
